# JH_MDS

./: .env.local.md  .gitignore  API-Contract.md  OAUTH_TROUBLESHOOTING.md  PRODUCTION_DEPLOYMENT.md  Project_Scope,md.txt  Project_Scope.md  README.md  SETUP_GUIDE.md  System_Architecture_Overview.md  VERCEL_PRODUCTION_SETUP.md  agents.md  check-service-status.ps1  deploy-production.ps1  deploy-vercel.ps1  main.py  package.json  populate_test_data.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  setup-redis.ps1  setup.sh  start-market-data-service.ps1  start-market-data.ps1  test-live-data.ps1  test-local-e2e.ps1  test_redis.py  test_saxo_connection.py  test_saxo_proper.py  test_saxo_simple.py  test_saxo_simple_no_redis.py  test_saxo_with_redis.py  todo.md  vercel.env.example  vercel.json
backend/: app.py  main.py  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt  vercel.json
backend/api/: README_VERCEL.md  get.py  index.py  poll.py  vercel_adapter.py
backend/app/: app.py  logger.py  monitoring.py  oauth.py  security.py
backend/core/: deps.py  monitoring.py  security.py  settings.py
backend/ingest/: market_data_service.py  saxo_ws.py
backend/market_data/: __init__.py  models.py
backend/models/: market.py
backend/routers/: auth.py  diagnostics.py  health.py  market.py
backend/services/: market_data.py  oauth_client.py  saxo_ws.py
backend/storage/: redis_client.py
backend/tests/: conftest.py  test_api_price.py  test_api_ticks.py  test_auth.py  test_diagnostics.py  test_health.py  test_imports.py  test_jwt_auth.py  test_market.py  (+2 more)
(+100 files in other folders)
