[project]
name = "JH-MDS"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic-settings>=2.0.0", # Moved and corrected format
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
